Revert "fix: 🐛 apply global scrollbar and link design"
This reverts commit 8189b8299f225537dd10f893f148e5d45df330cb.

--- a/src/styles/editor.css
+++ b/src/styles/editor.css
@@ -8,7 +8,7 @@
   padding-right: 5px;
   height: 490px;
   font-size: 1rem;
-  @apply border-none;
+  @apply border-none scrollbar;
 }
 
 .ProseMirror-focused {
@@ -53,13 +53,4 @@
 
 .ProseMirror h3 {
   @apply text-sm font-bold;
-}
-
-.ProseMirror a {
-  color: theme('colors.blue.prussian');
-  text-decoration: underline;
-}
-
-.ProseMirror a:hover {
-  cursor: pointer;
 }
